--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/diary?useSSL=false&useUnicode=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=0000
+server.port=8080
+server.address=0.0.0.0
 
 #JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
