--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,8 +9,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=0000
 
-#server.port=8080
-#server.address=0.0.0.0
+server.port=8080
+server.address=0.0.0.0
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 #JPA
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
@@ -23,3 +24,20 @@ spring.devtools.livereload.enabled=true
 # openWeather
 openweather.api.key=4bb66d8059b9e367d1207764e32daad2
 spring.main.allow-bean-definition-overriding=true
+
+
+# [??? OAuth2 ????? ??]
+spring.security.oauth2.client.registration.naver.client-id=j8xdJBclzgntA2ETrf5J
+spring.security.oauth2.client.registration.naver.client-secret=ygDbv9M7N2
+spring.security.oauth2.client.registration.naver.redirect-uri=https://www.chanho.site/login/oauth2/code/naver
+
+
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
+spring.security.oauth2.client.registration.naver.client-name=Naver
+
+# [??? OAuth2 ???(provider) ??]
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
