--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,13 @@ repositories {
 dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    runtimeOnly 'com.microsoft.sqlserver:mssql-jdbc'
-    runtimeOnly 'com.mysql:mysql-connector-j'
+
+
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'com.oracle.database.jdbc:ojdbc8:19.3.0.0'
+
+
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
@@ -29,7 +34,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     implementation 'com.fasterxml.jackson.core:jackson-databind'
 
-    implementation 'mysql:mysql-connector-java:8.0.33'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
     testImplementation 'org.junit.jupiter:junit-jupiter'
