--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,22 +2,27 @@ spring.application.name=diary
 
 
 
+spring.datasource.url=jdbc:oracle:thin:@oracledb_tp?TNS_ADMIN=/home/ubuntu/Wallet_oracleDB
+#spring.datasource.url=jdbc:oracle:thin:@oracledb_tp?TNS_ADMIN=/Users/myeongchanho/Downloads/Wallet_oracleDB
+spring.datasource.username=admin
+spring.datasource.password=OracleChanho#1
+spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-#DATABASE
-spring.datasource.url=jdbc:mysql://localhost:3306/diary?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=0000
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernare.dialect=org.hibernate.dialect.Oracle12cDialect
+
+#SQL log select
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=trace
+
 
 server.port=8080
 server.address=0.0.0.0
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
-#JPA
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.show_sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.hibernate.ddl-auto=update
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=true
 
@@ -27,10 +32,11 @@ spring.main.allow-bean-definition-overriding=true
 
 
 # [??? OAuth2 ????? ??]
+# evn
 spring.security.oauth2.client.registration.naver.client-id=j8xdJBclzgntA2ETrf5J
-spring.security.oauth2.client.registration.naver.client-secret=ygDbv9M7N2
-spring.security.oauth2.client.registration.naver.redirect-uri=https://www.chanho.site/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.client-secret=QoP15UgcMF
 
+spring.security.oauth2.client.registration.naver.redirect-uri=https://www.chanho.site/login/oauth2/code/naver
 
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.scope=name,email,profile_image
@@ -41,3 +47,8 @@ spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+openai.api-key=sk-proj-qfxiACTPlzgS9jSgLWNKBuOUW0z8tn-F7k3-TdtNSyJ64TiHHjMvUWGJHRh\
+  hTSLdVV4SWxPb3MT3BlbkFJC-Z0PpyWAy0thCG1b\
+  _gttw4I1eTpRdOHqa8yITyE_VU3a_CqkV7dlo1xCxsldFQFUypuivG04A
+openai.model=gpt-3.5-turbo
