--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,13 @@ repositories {
 dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-web'
-
+    implementation 'mysql:mysql-connector-java:8.0.33'
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'com.oracle.database.jdbc:ojdbc8:19.3.0.0'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.3.2'
+
 
 
 
