--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,15 +2,18 @@ spring.application.name=diary
 
 
 
-spring.datasource.url=jdbc:oracle:thin:@oracledb_tp?TNS_ADMIN=/home/ubuntu/Wallet_oracleDB
-#spring.datasource.url=jdbc:oracle:thin:@oracledb_tp?TNS_ADMIN=/Users/myeongchanho/Downloads/Wallet_oracleDB
-spring.datasource.username=admin
-spring.datasource.password=OracleChanho#1
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+# DATABASE
+#spring.datasource.url=jdbc:mariadb://localhost:3306/diary?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
 
+spring.datasource.url=jdbc:mariadb://3.38.13.239:3306/diary?useSSL=false&serverTimezone=Asia/Seoul
+spring.datasource.username=admin
+spring.datasource.password=cksgh0726
+spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernare.dialect=org.hibernate.dialect.Oracle12cDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
+
+
 
 #SQL log select
 spring.jpa.properties.hibernate.show_sql=true
