--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,12 @@ spring.application.name=diary
 
 # DATABASE
 #spring.datasource.url=jdbc:mariadb://localhost:3306/diary?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Seoul
+#spring.datasource..url=jdbc:mariadb://localhost:3306/diary?useUnicode=true&characterEncoding=utf8mb4&serverTimezone=Asia/Seoul
+#spring.datasource.username=root
+#spring.datasource.password=0000
 
-spring.datasource.url=jdbc:mariadb://database-1.cj2ewoiwinfl.ap-northeast-2.rds.amazonaws.com:3306/diary?useSSL=false&serverTimezone=Asia/Seoul
+
+spring.datasource.url=jdbc:mariadb://database-1.cj2ewoiwinfl.ap-northeast-2.rds.amazonaws.com:3306/diary?useUnicode=true&characterEncoding=utf8mb4&serverTimezone=Asia/Seoul
 spring.datasource.username=admin
 spring.datasource.password=cksgh0726
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
