--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=diary
 #spring.datasource.password=0000
 
 
-spring.datasource.url=jdbc:mariadb://database-1.cj2ewoiwinfl.ap-northeast-2.rds.amazonaws.com:3306/diary?useUnicode=true&characterEncoding=utf8mb4&serverTimezone=Asia/Seoul
+spring.datasource.url=jdbc:mariadb://database-1.cj2ewoiwinfl.ap-northeast-2.rds.amazonaws.com:3306/diary?useUnicode=true&characterEncoding=utf8mb4&useUnicode=true&serverTimezone=Asia/Seoul
 spring.datasource.username=admin
 spring.datasource.password=cksgh0726
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
